# dash

./: .env.example  .gitignore  Makefile  README.md
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_fts5_opportunities.py  0003_ingest_runs_guard.py
api/app/: ingest.py  main.py
api/app/core/: config.py
api/app/db/: session.py
api/app/models/: __init__.py  opportunity.py
api/app/routers/: ingest.py  opportunities.py
api/app/schemas/: api.py
api/tests/: conftest.py  test_api_endpoints.py  test_ingest.py
api/tests/fixtures/: mixed_tracker.csv
data/: cfp.csv  jobs.csv
scripts/: dev_api.sh  dev_web.sh  ingest.py  reset_db.py  watch_ingest.py
web/: .eslintrc.cjs  index.html  package.json
web/src/: App.tsx
web/src/lib/: api.ts  types.ts
